src/test/deca/syntax/invalid/decl_var/test_decl_var_without_type.deca
// Description:
//    tests de programme syntaxiquement incorrects : pas de nom de variable
//
// Resultats:
//    mismatched input '=' expecting {'false', 'if', 'new', 'null', 'readInt', 'readFloat', 'print', 'println', 'printlnx', 'printx', 'return', 'this', 'true', 'while', IDENT, '-', '(', '}', '!', ';', INT, FLOAT, STRING}
//    
//
// Historique:
//    cree le 01/01/2024


{
    = 0;
}